# forge

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  forge_cli.py  forge_config.py  models.py  pge_launcher.py  pyproject.toml  repository.py  requirements.txt  run_pge.py
.github/workflows/: ci.yml
app/: context_compression.py  database.py
app/models/: __init__.py
app/services/: __init__.py
contracts/: provider-profile.schema.json  run-snapshot.schema.json
control_plane/: __init__.py  __main__.py  api.py  codex_runner.py  database.py  models.py  runtime_snapshot.py  schemas.py  service.py  workers.py
docs/: LESSONS.md
docs/marketing/: CASE_STUDY_TEMPLATE.md  COMMUNITY_PLAN.md  DEMO_SCRIPT.md  LAUNCH_COPY.md  POSITIONING.md  PRESS_BRIEF.md  README.md  RELEASE_CHECKLIST.md  SOCIAL_CAMPAIGN.md
docs/marketing/assets/: render_campaign_video.sh
docs/marketing/landing/: index.html
engine/: hermes_tools.py  requirements.txt  smoke_test.py  test_loop.py  test_loop_control.py  test_run.py
engine/docs/: db_schema.md  design_spec.md  executor_prompt.md  heartbeat_schema.json
engine/docs/knowledge/: harness_workshop_transcript.md
engine/src/: auditor.py  graph.py  runtime.py  steward.py
engine/src/nodes/: auditor_node.py  evaluator_node.py  executor_node.py  planner_node.py
engine/src/state/: schema.py
evals/: __init__.py  model_incident_eval.py
evals/results/: gemma-4-12b-qat.json
experimental/: Cargo.toml  README.md
experimental/forge-cli/: Cargo.toml
experimental/forge-cli/src/: main.rs  model.rs  store.rs  tui.rs
forge_runtime/: __init__.py  context_pack.py  steering.py  tools.py
integrations/: __init__.py
integrations/slack/: README.md  __init__.py  bridge.py  client.py
migrations/: 001_control_plane.sql
tests/: conftest.py
tests/regression/: test_context_pack.py  test_launcher_lifecycle.py  test_loop_resilience.py  test_planner_router.py  test_render_contract_t7.py  test_run_command_shell.py  test_security_boundaries.py  test_slack_bridge.py  test_validate_tests_gate.py
tools_db/: CAPABILITIES.md  build_tool_docs.py  mcp_server.py  sync_registry_docs.py  test_memory_enhancements.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  index.css
web/src/lib/: control-plane.ts
